recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:15: error: not found: value level
	snowSquare(level-1,length)
                   ^